# timler

./: .gitignore  Cargo.toml
migrations/2021-10-21-211941_create_entries/: up.sql
src/: main.rs  models.rs  schema.rs  utility.rs
src/routes/: entry.rs  mod.rs  retrieve.rs
static/: style.css
templates/: base.html.tera  entries.html.tera  entry.html.tera  error.html.tera  index.html.tera  macros.html.tera
